# aspect-workflows-template

./: .gitignore  MODULE.aspect  README.md  STARTER_CI_FAILURES.md  dev.axl  init.axl  scaffold.yaml  template-config.json  test.sh
.github/workflows/: ci.yaml  deliver.yaml  multitool.yml  publish-starters.yaml  publish_release.yaml  tag.yaml  weekly_tag.yaml
hooks/: post_scaffold
template/: .bazelrc  .editorconfig  .envrc  .gitattributes  .gitignore  BUILD.bazel  Gemfile  MODULE.bazel  README.bazel.md  README.md  REPO.bazel  go.mod  package.json  prettier.config.cjs  pyproject.toml
template/.aspect/: config.axl  version.axl
template/.aspect/gazelle/: BUILD.bazel  go_image.axl  package-json-scripts.axl  shell.axl
template/.github/workflows/: ci.yaml
template/bazel/: BUILD.bazel  downloader.cfg  preset.bazelrc  workspace_status.sh
template/bazel/oci/: BUILD.bazel  go_image.bzl  py3_image.bzl
template/bazel/toolchains/: BUILD.bazel
template/hello/cpp/: BUILD.bazel  hello.cc  hello.h  hello_test.cc  main.cc
template/hello/go/: BUILD.bazel  hello.go  hello_test.go
template/hello/java/: BUILD.bazel  Hello.java  HelloTest.java
template/hello/js/: BUILD.bazel  greet.test.ts  greet.ts  hello.ts
template/hello/kotlin/: BUILD.bazel  Hello.kt  HelloTest.kt
template/hello/py/: BUILD.bazel  greet.py  hello.py  hello_test.py
template/hello/ruby/: BUILD.bazel  hello.rb  hello_test.rb
template/hello/rust/: BUILD.bazel  main.rs
template/hello/scala/: BUILD.bazel  Hello.scala  HelloTest.scala
template/hello/shell/: BUILD.bazel  hello.sh  hello_test.sh
template/tools/: BUILD.bazel  package.json  repin  tools.lock.json
template/tools/format/: BUILD.bazel
template/tools/gazelle/: BUILD.bazel
template/tools/lint/: BUILD.bazel  linters.bzl
template/tools/pytest/: BUILD.bazel  defs.bzl
user_stories/: STRUCTURE.md  apple.md  cpp  cpp.md  go  go.md  java  java.md  js  js.md  kitchen-sink  kitchen-sink.md  kotlin  kotlin.md  minimal  minimal.md  py  py.md  ruby.md  rust  rust.md  scala.md  shell  shell.md
{{ .ProjectSnake }}/: .bazelignore  .bazeliskrc  .bazelrc  .bazelversion  .envrc  .gitattributes  .gitignore  .rubocop.yml  BUILD  BUILD.bazel  Cargo.toml  DEVELOPER.md  Gemfile  MODULE.aspect  MODULE.axl  MODULE.bazel  README.bazel.md  REPO.bazel  WORKSPACE.bazel  gazelle_python.yaml  go.mod  go.sum  maven_install.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.cjs  pyproject.toml  repin.sh  requirements.txt  requirements_lock.txt  rules_lint.patch  rules_lint_2.patch  ty.toml
{{ .ProjectSnake }}/.aspect/: lint.axl  task.axl
{{ .ProjectSnake }}/.aspect/bazelrc/: BUILD  BUILD.bazel  convenience.bazelrc  correctness.bazelrc  debug.bazelrc  java.bazelrc  javascript.bazelrc  performance.bazelrc
{{ .ProjectSnake }}/.aspect/cli/: config.yaml  package-json-scripts.star  py3_image.star  pytest_main.star  shell.star
{{ .ProjectSnake }}/.aspect/gazelle/: go_image.axl  package-json-scripts.axl  py3_image.axl
{{ .ProjectSnake }}/.devcontainer/: Dockerfile  devcontainer.json
{{ .ProjectSnake }}/.github/workflows/: multitool.yml  weekly_tag.yaml
{{ .ProjectSnake }}/githooks/: pre-commit
{{ .ProjectSnake }}/requirements/: BUILD  BUILD.bazel  all.in  all.txt  runtime.txt  tools.in
{{ .ProjectSnake }}/tools/: BUILD  BUILD.bazel  _multitool_run_under_cwd.sh  _run_under_cwd.sh  go.mod  package.json  preset.bazelrc  repin  tools.go  tools.lock.json  workspace_status.sh
{{ .ProjectSnake }}/tools/format/: BUILD  BUILD.bazel
{{ .ProjectSnake }}/tools/lint/: BUILD  BUILD.bazel  linters.bzl
{{ .ProjectSnake }}/tools/oci/: BUILD.bazel  go_image.bzl  py3_image.bzl
{{ .ProjectSnake }}/tools/pytest/: defs.bzl
{{ .ProjectSnake }}/tools/repin/: BUILD
{{ .ProjectSnake }}/tools/toolchains/: BUILD  BUILD.bazel
