"""Targets in the repository root"""

{% if javascript %}
load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@npm//:defs.bzl", "npm_link_all_packages")

# TODO: remove once https://github.com/aspect-build/aspect-cli/issues/560 done
# gazelle:js_npm_package_target_name pkg
npm_link_all_packages(name = "node_modules")
{% if lint %}

js_library(
    name = "eslintrc",
    srcs = ["eslint.config.mjs"],
    visibility = ["//:__subpackages__"],
    deps = [
        ":node_modules/@eslint/js",
        ":node_modules/typescript-eslint",
    ],
)

js_library(
    name = "prettierrc",
    srcs = ["prettier.config.cjs"],
    deps = [],
    visibility = ["//tools/format:__pkg__"],
)
{% endif %}
{% endif %}

{% if lint %}
exports_files([
{% if cpp %}
    ".clang-tidy",
{% endif %}
{% if ruby %}
    ".rubocop.yml",
{% endif %}
{% if kotlin %}
    "ktlint-baseline.xml",
    ".editorconfig",
{% endif %}
{% if java %}
    "pmd.xml",
{% endif %}
{% if shell %}
    ".shellcheckrc",
{% endif %}
], visibility = ["//:__subpackages__"])
{% endif %}
{% if go %}
# gazelle:prefix example.com/{{ project_snake }}
{% endif %}
{% if javascript %}
# It's faster to avoid type-checking in a devserver when using monorepo packages.
# If you commonly ship your npm packages outside the repo, change this to "npm_package"
# gazelle:js_package_rule_kind js_library
{% endif %}
{% if proto %}
# Workaround https://github.com/bazel-contrib/bazel-gazelle/issues/2001
# gazelle:map_kind proto_library proto_library @protobuf//bazel:proto_library.bzl
{% endif %}
# The gazelle binary + `gazelle` runner target live in //tools/gazelle (the
# default target for `aspect gazelle`). Run `aspect gazelle` to generate BUILDs.

{% if python %}
# uv reads pyproject.toml; tools/pytest also attaches it as test data.
exports_files(
    ["pyproject.toml"],
    visibility = ["//:__subpackages__"],
)
{% endif %}
