"Targets in the workspace root"
{{- if .Computed.javascript }}
load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@npm//:defs.bzl", "npm_link_all_packages")
{{ end }}
{{- if .Computed.python }}
load("@rules_python//python:pip.bzl", "compile_pip_requirements")
{{ end}}

{{- if .Scaffold.lint }}
alias(
    name = "format",
    actual = "//tools/format",
)

exports_files(
    [
        ".shellcheckrc",
{{- if .Computed.python }}
        "pyproject.toml",
{{- end }}
    ],
    visibility = ["//visibility:public"],
)
{{- end }}

{{- if .Computed.javascript }}
npm_link_all_packages(name = "node_modules")

{{- if .Scaffold.lint }}
js_library(
    name = "eslintrc",
    srcs = ["eslint.config.mjs"],
    deps = [
        ":node_modules/@eslint/js",
        ":node_modules/typescript-eslint",
    ],
    visibility = ["//:__subpackages__"],
)
{{- end }}
{{- end }}

{{ if .Computed.python }}
compile_pip_requirements(
    name = "requirements",
    requirements_in = "pyproject.toml",
    requirements_txt = "requirements_lock.txt",
)
{{- end }}
